@@ -689,6 +689,7 @@ namespace spot
                         dests2.begin());
     }
 
+#ifndef SWIG
     /// \brief Renumber all states, and drop some.
     ///
     /// This semi-internal function is a wrapper around
@@ -705,11 +706,25 @@ namespace spot
     /// \param newst A vector indicating how each state should be
     /// renumbered.  Use -1U to mark an unreachable state for removal.
     /// Ignoring the occurrences of -1U, the renumbering is expected
-    /// to satisfy newst[i] ≤ i for all i.
+    /// to satisfy newst[i] ≤ i for all i.   If the automaton contains
+    /// universal branching, this vector is likely to be modified by
+    /// this function, so do not reuse it afterwards.
     ///
     /// \param used_states the number of states used after
     /// renumbering.
-    void defrag_states(std::vector<unsigned>&& newst, unsigned used_states);
+    ///@{
+    void defrag_states(std::vector<unsigned>& newst,
+                       unsigned used_states);
+
+    // prototype was changed in Spot 2.10
+    SPOT_DEPRECATED("use reference version of this method")
+    void defrag_states(std::vector<unsigned>&& newst,
+                       unsigned used_states)
+    {
+      return defrag_states(newst, used_states);
+    }
+    ///@}
+#endif // SWIG
 
     /// \brief Print the data structures used to represent the
     /// automaton in dot's format.
